--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "react-hook-form": "^7.57.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.6.2",
+    "remixicon": "^4.6.0",
+    "swiper": "^11.2.8",
     "zod": "^3.25.56"
   },
   "devDependencies": {
