--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.16.0",
     "nodemon": "^3.1.10",
     "otp-generator": "^4.0.1",
+    "slugify": "^1.6.6",
     "twilio": "^5.7.1",
     "validator": "^13.15.15"
   }
