--- a/backend/package.json
+++ b/backend/package.json
@@ -13,16 +13,20 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.10",
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "slugify": "^1.6.6",
+    "stream": "^0.0.3",
     "twilio": "^5.7.1",
     "validator": "^13.15.15"
   }
