--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,37 +12,35 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@eslint/js": "^9.25.0",
     "@hookform/resolvers": "^5.1.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@mui/x-date-pickers": "^8.5.2",
     "@tailwindcss/vite": "^4.1.8",
-    "axios": "^1.9.0",
-    "dayjs": "^1.11.13",
-    "jwt-decode": "^4.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.57.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.6.2",
-    "remixicon": "^4.6.0",
-    "swiper": "^11.2.8",
-    "zod": "^3.25.56",
-    "@eslint/js": "^9.25.0",
     "@types/node": "^22.15.30",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.5.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.6.2",
+    "recharts": "^3.1.0",
+    "remixicon": "^4.6.0",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.8",
-    "vite": "^6.3.5"
-  },
-  "devDependencies": {
-   
+    "vite": "^6.3.5",
+    "zod": "^3.25.56"
   }
 }
