--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "postcss": "^8.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
