--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
