--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "industrybuying": "file:..",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.4",
