--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start-frontend": "cd frontend && npm run dev",
     "install-all": "npm --prefix frontend install && npm --prefix backend install",
     "build": "npm run build --prefix frontend"
-    
   },
   "keywords": [],
   "author": "",
@@ -18,5 +17,8 @@
   "type": "commonjs",
   "devDependencies": {
     "concurrently": "^9.2.0"
+  },
+  "dependencies": {
+    "compression": "^1.8.1"
   }
 }
